fixed bugs (added z-index to page not found, changed sun icon, added space in title

--- a/src/app/components/not-found/not-found.component.scss
+++ b/src/app/components/not-found/not-found.component.scss
@@ -5,5 +5,5 @@
   width: 100vw;
   height: 100vh;
   object-fit: cover;
-  z-index: 9999;
+  z-index: 10001;
 }
